@@ -1,6 +1,7 @@
 Revision history for Time::DoAfter
 
 {{$NEXT}}
+        - Added wait_adjust() method
 
 1.04      2016-09-20 08:31:39-07:00 America/Los_Angeles
         - last() is now also a setter (was just a getter)
